# Orbital

./: .gitignore  Cargo.toml  NOTICE  README.md
aextract/: Cargo.toml  build.rs
aextract/AextractSidecar/: AextractSidecar.csproj  Program.cs
aextract/src/: cli.rs  main.rs
orbital/: package.json  pnpm-lock.yaml
orbital/src/: App.tsx  bindings.ts  main.tsx
orbital/src-tauri/: Cargo.toml  tauri.conf.json
orbital/src-tauri/capabilities/: default.json
orbital/src-tauri/src/: lib.rs  main.rs
orbital/src-tauri/src/commands/: asset_version.rs  asset_versions.rs  mod.rs  projects.rs
orbital/src-tauri/src/error/: commands.rs  mod.rs
orbital/src-tauri/src/utils/: app_state.rs  mod.rs  projects.rs
orbital/src/lang/: en.json
orbital/src/modals/: OpenModalProvider.tsx  context.ts  index.ts  util.tsx
orbital/src/modals/components/: CreateProjectModal.tsx
orbital/src/styles/: index.scss
orbital/src/styles/views/: startup.scss  views.scss
orbital/src/types/: error.ts  loading.ts
orbital/src/utils/: Localization.tsx
orbital/src/utils/api/: ApiProvider.tsx  index.ts  util.ts
orbital/src/utils/asset/: AssetImage.tsx  AssetVersionProvider.tsx  index.ts  util.ts
orbital/src/utils/project/: ProjectProvider.tsx
orbital/src/utils/theme/: themeContext.ts  themes.ts
orbital/src/utils/theme/dark/: cssVariableResolver.ts  theme.ts
orbital/src/views/: routes.tsx
orbital/src/views/layout/: Layout.tsx
orbital/src/views/startup/: Startup.tsx
orbital_common/: Cargo.toml  out.json
orbital_common/src/: error.rs  lib.rs  steam.rs  test_utils.rs
orbital_common/src/types/: mod.rs  sf_docs.rs
orbital_common/src/types/satisfactory/: building.rs  generator.rs  mod.rs  uestring.rs  utility.rs
resources/assets/1.0-stable/: docs.json
resources/assets/1.1-experimental/: docs.json
