[package]
name = "aextract"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "cargo"] }
orbital_common = { version = "*", path = "../orbital_common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
