[package]
name = "aextract"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "cargo"] }
duct = "1.0.0"
glob = "0.3.2"
orbital_common = { version = "*", path = "../orbital_common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
walkdir = "2.5.0"
zip = { version = "2.6.1", features = ["bzip2"] }

[build-dependencies]
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = { version = "0.12.15", features = ["blocking"] }
syn = { version = "2.0.101", features = ["full"] }
