[package]
name = "orbital_common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
specta = { version = "=2.0.0-rc.22", features = ["serde", "serde_json", "uuid", "bson"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
strip_bom = "1.0.0"
thiserror = "2.0.12"
convert_case = "0.8.0"

[dev-dependencies]
figment = { version = "0.10.19", features = ["toml"] }
