[package]
name = "orbital"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orbital_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persistence = "0.1.1"
tauri-plugin-log = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
log = { version = "0.4.27", features = ["serde", "std"] }
tauri-plugin-dialog = "2"
orbital_common = {version = "*", path = "../../orbital_common"}
tauri-plugin-zustand = "0.1.2"
specta = {version = "=2.0.0-rc.22", features = ["derive"] }
taurpc = "0.5.0"
specta-typescript = "0.0.9"
tokio = { version = "1.45.0", features = ["full"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
bevy_reflect = { version = "0.16.0", features = ["uuid"] }
maplit = "1.0.2"
rust-patch = "0.1.3"
derive_builder = "0.20.2"
async-trait = "0.1.88"

